refactor: Resolve Sonar issues & cleanups
- Join assertions to chains
- Replace Arrays.asList() by List.of()
- Fix typos
- Add 'expected' comment to empty catch blocks
- use dedicated assertion methods like isGreaterThan, isSameAs
- Remove explicit type arguments when not needed
- fix paragraphs in javadoc
- Suppress warnings for call of deprecated API
- replace assertThat(xxx instanceof YYY).isTrue() -> assertTht(xxx).isInstanceOf(YYY.class)